# leopa-color

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/leopa_color/: __init__.py  config.py  main.py  models.py
src/leopa_color/routers/: colorize.py  references.py
src/leopa_color/services/: replicate_service.py  storage_service.py
static/css/: styles.css
static/js/: upload.js
templates/: colorize.html  index.html
templates/partials/: reference_list.html  result.html
tests/: conftest.py  test_colorize.py  test_main.py  test_references.py  test_storage_service.py
